--- a/src/css/footer.module.css
+++ b/src/css/footer.module.css
@@ -7,3 +7,68 @@
     justify-content: space-evenly;
     align-items: center;
 }
+
+.links-div{
+    width: 80%;
+    margin: 40px 0 20px 0;
+}
+
+.nav-link:hover > a{
+    /* color: var(--darkGrey); */
+    font-weight: bolder;
+    cursor: pointer;
+}
+
+.social-media-div{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    margin: 20px 0;
+}
+
+.icon{
+    font-size: 25px;
+    margin: 0 20px;
+}
+
+.icon:hover{
+    transform: translateY(-5px);
+    color: rgb(210, 16, 52);
+    transition: 0.3s linear;
+}
+
+.mediapart{
+    height: 30px;
+    width: 40px;
+    margin: 0 20px;
+    background-image: url('./../images/mediapart.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+.mediapart:hover{
+    background-image: url('./../images/mediapartrouge.png');
+    transform: translateY(-5px);
+    transition: 0.3s linear;
+}
+
+.copyright{
+    padding: 10px 0;
+    border-bottom: 0.5px solid black;
+}
+
+.copyright-dev{
+    padding: 10px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.logo-dev{
+    background-image: url('../images/monlogo.png');
+    height: 50px;
+    width: 50px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin: 10px 0;
+}
