--- a/src/css/index.module.css
+++ b/src/css/index.module.css
@@ -62,6 +62,10 @@
     min-width: 90px;
 }
 
+.voir-plus:hover {
+    text-decoration: underline;
+}
+
 /* main section (nouveautés) */
 
 .first-article-div{
@@ -105,8 +109,13 @@
     margin: 2% 4% 2% 0;
 }
 
-.main-articles-content h4 {
+.main-articles-content h3 {
     margin-top: 10px;
+    transition: linear 0.3s;
+}
+
+.main-articles-content h3:hover, .main-article-content h2:hover {
+    text-decoration: underline;
 }
 
 /* section politique */
@@ -115,10 +124,26 @@
     margin: 15px 2%;
 }
 
+.politique-content p {
+    margin-top: 0;
+}
+
+.politique-content:hover h3{
+    text-decoration: underline;
+}
+
+.politique-section h3:hover{
+    text-decoration: underline;
+}
+
 /* section Editeurs */
 
 .editeurs-content{
     margin-bottom: 15px;
+}
+
+.editor-section h2:hover{
+    text-decoration: underline;
 }
 
 /* section culture */
@@ -136,4 +161,8 @@
     width: 100%;
     height: 240px;
     background-color: black;
+}
+
+.culture-section h2:hover{
+    text-decoration: underline;
 }
