--- a/src/css/navbar.module.css
+++ b/src/css/navbar.module.css
@@ -23,8 +23,36 @@
 }
 
 .social-media-div{
-    width: 100px;
     margin-right: 10vw;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+}
+
+.icon{
+    font-size: 25px;
+    margin: 0 10px;
+}
+
+.icon:hover{
+    transform: translateY(-5px);
+    color: rgb(210, 16, 52);
+    transition: 0.3s linear;
+}
+
+.mediapart{
+    height: 30px;
+    width: 40px;
+    margin: 0 10px;
+    background-image: url('./../images/mediapart.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+.mediapart:hover{
+    background-image: url('./../images/mediapartrouge.png');
+    transform: translateY(-5px);
+    transition: 0.3s linear;
 }
 
 .nav-link{
