--- a/src/css/category.module.css
+++ b/src/css/category.module.css
@@ -6,6 +6,10 @@
     align-items: center;
 }
 
+.link:hover{
+    text-decoration: underline;
+}
+
 h1 {
     margin-top : 30px;
 }
@@ -62,14 +66,14 @@ h1 {
     grid-row: 4 / 5;
     grid-column: 1 / 2;
     padding-right: 5px;
+    margin-right: 5px;
     border-right: 0.5px solid var(--darkGrey);
 }
 
 .article5 {
     grid-row: 4 / 5;
     grid-column: 2 / 3;
-    padding-left: 5px;
-    padding-right: 5px;
+    padding-right: 10px;
     border-right: 0.5px solid var(--darkGrey);
 
 }
