--- a/src/css/footer.module.css
+++ b/src/css/footer.module.css
@@ -1,7 +1,7 @@
 .footer-div{
-    width: 80vw;
+    width: 90vw;
     border-top: 1px black solid;
-    margin: 20px 10vw;
+    margin: 20px 5vw;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -9,8 +9,15 @@
 }
 
 .links-div{
-    width: 80%;
+    width: 90%;
     margin: 40px 0 20px 0;
+}
+
+.links {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .nav-link:hover > a{
@@ -52,13 +59,17 @@
     transition: 0.3s linear;
 }
 
+.icon-link{
+    height: 25px;
+}
+
 .copyright{
-    padding: 10px 0;
+    padding: 10px 0 20px 0;
     border-bottom: 0.5px solid black;
 }
 
 .copyright-dev{
-    padding: 10px 0;
+    padding: 20px 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -70,5 +81,17 @@
     width: 50px;
     background-size: contain;
     background-repeat: no-repeat;
-    margin: 10px 0;
+    margin: 20px 0;
+}
+
+@media screen and (max-width: 640px) {
+    .links {
+        flex-direction: column;
+    }
+    .links-div{
+        margin: 20px 0;
+    }
+    .nav-link {
+        margin: 10px 0;
+    }
 }
