--- a/src/css/index.module.css
+++ b/src/css/index.module.css
@@ -12,7 +12,7 @@
     width: 80vw;
     grid-template-columns: 26vw 26vw 28vw;
     grid-template-rows: auto auto auto auto;
-    margin: 50px 10vw 50px 10vw;
+    margin: 20px 10vw 20px 10vw;
 }
 
 .main-section{
@@ -22,10 +22,13 @@
 .editor-section{
     grid-row: 1 / 3;
     grid-column: 3 / 4;
+    padding-left: 20px;
 }
 .politique-section {
     grid-row: 3 / 6;
     grid-column: 3 /4;
+    padding-left: 20px;
+
 }
 .culture-section {
     grid-row: 5 /7;
@@ -44,13 +47,14 @@
 .section-title{
     margin-bottom: 20px;
     margin-top: 20px;
-    min-width: 150px;
+    white-space: nowrap;
+    margin-right: 5px;
 }
 
 .line-div{
     height: 0;
-    width: 94%;
-    margin: 0 3%;
+    width: 100%;
+    /* margin: 0 3%; */
     border-top: 0.5px solid var(--darkGrey);
 }
 
@@ -59,7 +63,9 @@
 }
 
 .voir-plus{
-    min-width: 90px;
+    white-space: nowrap;    
+    text-align: right;
+    margin-left: 5px;
 }
 
 .voir-plus:hover {
@@ -71,12 +77,13 @@
 .first-article-div{
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     width: 100%;
 }
 
 .main-article-image-div{
-    width: 44%;
-    margin-right: 4%;
+    width: 48%;
+    /* margin-right: 4%; */
     height: 240px;
     /* background-color: black; */
 }
@@ -88,8 +95,6 @@
 
 .main-article-content{
     width: 48%;
-    margin-right: 4%;
-    height: 200px;
 }
 
 .main-article-par {
@@ -101,12 +106,13 @@
     width: 100%;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     flex-wrap: wrap;
 }
 
 .main-articles-content{
-    width: 46%;
-    margin: 2% 4% 2% 0;
+    width: 48%;
+    margin: 2% 0 2% 0;
 }
 
 .main-articles-content h3 {
@@ -121,7 +127,7 @@
 /* section politique */
 
 .politique-content{
-    margin: 15px 2%;
+    margin: 15px 0;
 }
 
 .politique-content p {
@@ -149,8 +155,8 @@
 /* section culture */
 
 .culture-article{
-    width: 46%;
-    margin: 0 4% 2% 0;
+    width: 48%;
+    margin: 0 0 2% 0;
 }
 
 .culture-article h3 {
@@ -166,3 +172,68 @@
 .culture-section h2:hover{
     text-decoration: underline;
 }
+
+.culture-articles {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: start;
+}
+
+@media screen and (max-width: 640px) {
+
+    .home-div{
+        display: grid;
+        width: 90vw;
+        grid-template-columns: 90vw;
+    grid-template-rows: auto auto auto auto auto;
+        margin: 0 5vw 10px 5vw;
+    }
+
+    .section-title {
+        margin: 10px 5px 10px 0;
+    }
+
+    .main-section{
+        grid-row: 1 / 2;
+        grid-column: 1 / 2;
+    }
+    .editor-section{
+        grid-row: 4 / 5;
+        grid-column: 1 / 2;
+        padding-left: 0;
+    }
+    .politique-section {
+        grid-row: 3 / 4;
+        grid-column: 1 / 2;
+        padding-left: 0;
+
+    }
+    .culture-section {
+        grid-row: 2 /3;
+        grid-column: 1 / 2;
+        margin-top: 20px;
+    }
+
+    .first-article-div{
+        flex-direction: column;
+    }
+    .main-article-image-div{
+        width: 100%;
+    }
+    .main-article-content{
+        width: 100%;
+    }
+
+    .culture-articles {
+        flex-direction: column;
+    }
+
+    .culture-article {
+        width: 100%;
+    }
+
+    
+}
+
+
