--- a/src/css/about.module.css
+++ b/src/css/about.module.css
@@ -20,3 +20,19 @@
     width: 64vw;
     margin: 10px 0;
 }
+
+@media screen and (max-width: 640px) {
+    .container {
+        width: 90%;
+        margin: 10px 5vw;
+    }
+
+    .container p {
+        width: 100%;
+    }
+
+    .image {
+        width: 100%;
+        min-height: 200px;
+    }
+}
