--- a/src/css/category.module.css
+++ b/src/css/category.module.css
@@ -147,3 +147,92 @@ h2 {
 .main-content {
     margin-bottom: 10px;
 }
+
+.mobile {
+    display: none;
+}
+
+@media screen and (max-width: 640px) {
+
+    .container{
+        width: 90vw;
+        margin: 10px 5vw 10px 5vw;
+    }
+
+    h1 {
+        margin-top: 5px;
+    }
+
+    .presentation {
+        width: 80%;
+        margin: 10px 0;
+    }
+
+    .line{
+        margin-bottom: 10px;
+        width: 80%;
+    }
+
+    .articles {
+        margin: 10px 5vw;
+        width: 90vw;
+        grid-template-columns: auto;
+        grid-template-rows: auto auto auto auto auto;
+    }
+
+    .main-article {
+        grid-row: 1 /2;
+        grid-column: 1 / 2;
+        border-right: none;
+        border-bottom: 0.5px solid var(--darkGrey);
+        padding: 20px 0;
+        margin: 0;
+    }
+    .article2 {
+        grid-row: 2 / 3;
+        grid-column: 1 / 2;
+        border-right: none;
+        border-bottom: 0.5px solid var(--darkGrey);
+        padding: 20px 0;
+        margin: 0;
+    }
+    .article3 {
+        grid-row: 3 / 4;
+        grid-column: 1 / 2;
+        border-right: none;
+        border-bottom: 0.5px solid var(--darkGrey);
+        padding: 20px 0;
+        margin: 0;
+    }
+    .article4 {
+        grid-row: 4 / 5;
+        grid-column: 1 / 2;
+        border-right: none;
+        border-bottom: 0.5px solid var(--darkGrey);
+        padding: 20px 0;
+        margin: 0;
+    }
+    .article5 {
+        grid-row: 5 / 6;
+        grid-column: 1 / 2;
+        border-right: none;
+        padding: 20px 0;
+        margin: 0;
+    }
+
+    .main-image {
+        height: 200px;
+    }
+
+    .category {
+        width: 90vw;
+    }
+
+    .desktop {
+        display: none;
+    }
+
+    .mobile {
+        display: block;
+    }
+}
