--- a/src/css/about.module.css
+++ b/src/css/about.module.css
@@ -10,6 +10,7 @@
 .image{
     width: 64vw;
     min-height: 40vw;
+    margin: 20px 0;
 } 
 
 .container h1{
@@ -20,6 +21,43 @@
     width: 64vw;
     margin: 10px 0;
 }
+
+.contact {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top : 20px;
+}
+
+.form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.form > div {
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    margin: 10px 0;
+}
+
+input, textarea {
+    width: 100%;
+    padding: 1%;
+
+}
+
+textarea {
+    height: 200px;
+}
+
 
 @media screen and (max-width: 640px) {
     .container {
