little bugs fixed for mobile version

--- a/src/css/navbar.module.css
+++ b/src/css/navbar.module.css
@@ -22,6 +22,10 @@
     margin-left: 10vw;
 }
 
+.logo-div > div {
+    height: 100%;
+}
+
 .main-titles {
     display: flex;
     flex-direction: column;
