--- a/src/css/auteur.module.css
+++ b/src/css/auteur.module.css
@@ -9,7 +9,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .image-div {
@@ -32,9 +32,28 @@
     text-decoration: underline;
 }
 
+@media screen and (max-width: 640px) {
+    .auteur-section {
+        height: fit-content;
+        margin: 20px 0;
+        padding: 10px;
+        flex-direction: column;
+        align-items: center;
+    }
+    .image-div{
+        height: 130px;
+        width: 130px;
+    }
+    .content-div {
+        width: 100%;
+        padding: 0 10px 0 10px;
+    }
+}
+
 /* page-template */
 
 .main-div {
-    width: 80%;
-    margin: 20px 10%;
+    width: 90%;
+    margin: 20px 5%;
 }
+
