--- a/src/css/category.module.css
+++ b/src/css/category.module.css
@@ -1,6 +1,6 @@
 .container {
     width: 80vw;
-    margin: 10px 10vw 10px 10vw;
+    margin: 0 10vw 10px 10vw;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -11,18 +11,18 @@
 }
 
 h1 {
-    margin-top : 30px;
+    margin-top : 20px;
 }
 .presentation {
     width: 70%;
     text-align: center;
-    margin: 30px 0;
+    margin: 20px 0;
 }
 
 .line {
     border: 0.5px solid black;
     width: 70%;
-    margin: 10px 0 30px 0;
+    margin: 0 0 20px 0;
 }
 
 .author-span:hover{
@@ -47,7 +47,7 @@ h1 {
     width: 80vw;
     grid-template-columns: 26vw 26vw 28vw;
     grid-template-rows: auto auto auto auto;
-    margin: 50px 10vw 50px 10vw;
+    margin: 0 10vw 50px 10vw;
 }
 
 .main-article {
