corrected bug and created new features

--- a/src/css/index.module.css
+++ b/src/css/index.module.css
@@ -13,7 +13,7 @@
     grid-template-columns: 26vw 26vw 28vw;
     grid-template-rows: auto auto auto auto;
     margin: 0 10vw 20px 10vw;
-    padding-top: 52px;
+    /* padding-top: 52px; */
 }
 
 .main-section{
