--- a/src/css/category.module.css
+++ b/src/css/category.module.css
@@ -16,13 +16,13 @@ h1 {
 .presentation {
     width: 70%;
     text-align: center;
-    margin: 20px 0;
+    margin: 20px 0 5px 0;
 }
 
 .line {
-    border: 0.5px solid black;
+    border-top: 0.5px solid var(--darkGrey);
     width: 70%;
-    margin: 0 0 20px 0;
+    margin: 0 0 10px 0;
 }
 
 .author-span:hover{
