new css details

--- a/src/css/article.module.css
+++ b/src/css/article.module.css
@@ -15,6 +15,10 @@
     font-size: 19px;
 }
 
+.presentation:before{
+    /* content: '\00a0 \00a0 \00a0 \00a0 \00a0'; */
+}
+
 .legend {
     font-style: italic;
 }
@@ -42,6 +46,10 @@ article > * {
     margin: 20px 80px;
     font-size: 19px;
     line-height: 1.7;
+}
+
+article p:before {
+    /* content: "\00a0 \00a0 \00a0 \00a0 \00a0"; */
 }
 
 .article a {
