--- a/src/css/auteur.module.css
+++ b/src/css/auteur.module.css
@@ -8,7 +8,7 @@
     margin: 20px 80px;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: flex-start;
 }
 
@@ -16,12 +16,18 @@
     background-color: black;
     border-radius: 90px;
     height: 180px;
+    min-height: 180px;
     width: 180px;
+    min-width: 180px;
 }
 
 .content-div {
-    width: 80%;
+    width: calc(80vw - 240px - 180px - 80px);
     padding: 0 40px 0 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
 }
 
 .content-div h4 {
