added pagination for article list, corrected many details

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -26,6 +26,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -62,6 +63,8 @@ h6 {
 .sticky + div {
     padding-top: 52px;
 }
+
+
 
 /* general classes */
 
