--- a/src/css/article.module.css
+++ b/src/css/article.module.css
@@ -15,12 +15,18 @@
     font-size: 19px;
 }
 
+
 .presentation:before{
     /* content: '\00a0 \00a0 \00a0 \00a0 \00a0'; */
 }
 
+.presentation + div{
+    margin: 0 80px;
+}
+
 .legend {
     font-style: italic;
+    margin: 0 80px;
 }
 
 .date-and-author {
@@ -80,6 +86,14 @@ article p:before {
 
     .presentation {
         margin: 20px 0;
+    }
+
+    .presentation + div {
+        margin: 0;
+    }
+
+    .legend {
+        margin: 0;
     }
     
     .container > p:first-of-type {
