auteurs et facebook

--- a/src/css/auteur.module.css
+++ b/src/css/auteur.module.css
@@ -63,3 +63,14 @@
     margin: 20px 10%;
 }
 
+/* page auteurs */
+
+.list-authors {
+    width: 80vw;
+    margin: 20px 10vw;
+}
+
+.list-authors h1 {
+    width: 100%;
+    text-align: center;
+}
